feat: change scanning behavior for pertes & reassort
