# src/main/openapi/openapi.json
@@ -106,6 +106,10 @@
               "type" : "integer",
               "format" : "int64"
             }
+          },
+          "motifId" : {
+            "type" : "integer",
+            "format" : "int64"
           }
         }
       },
@@ -450,7 +454,7 @@
     },
     "/api/releve/rebut" : {
       "post" : {
-        "summary" : "Envoyer les DLC J-0 au rebut (stock.scrap Odoo)",
+        "summary" : "Envoyer les pertes au rebut avec un motif unique (stock.scrap Odoo)",
         "operationId" : "sendRebut",
         "tags" : [ "Relevé" ],
         "requestBody" : {
